kubernetes/apps/garlicdoor/ingress/authentik-outpost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost-garlicdoor
  namespace: garlicdoor
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  
  tls:
  - hosts:
    - home.beutra.fr
    secretName: garlicdoor-tls
  
  rules:
  - host: home.beutra.fr
    http:
      paths:
      - path: /outpost.goauthentik.io
        pathType: Prefix
        backend:
          service:
            name: ak-outpost-authentik-embedded-outpost
            port:
              number: 9000
